--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ html,
 body,
 :root {
   height: 100%;
+  font-size: 100%;
 }
 
 .leaflet-bottom,
@@ -22,4 +23,10 @@ body,
 .rdrCalendarWrapper {
   font-size: 16px !important;
   width: 100% !important;
+}
+
+.typewriterpara {
+  margin: 20px 0;
+  height: 20px;
+  letter-spacing: 5px;
 }
