payment, profile, beautify

--- a/styles/scss/home.scss
+++ b/styles/scss/home.scss
@@ -23,11 +23,15 @@
                         margin: 40px 0;
                         height: 20px;
                         letter-spacing: 5px;
-                        font-size: 2rem;
+                        font-size: 1.6rem;
+                        font-weight: 500;
+                        color: #333;
                     }
 
                     .Typewriter__cursor {
-                        font-size: 2rem;
+                        font-size: 1.6rem;
+                        font-weight: 500;
+                        color: #333;
                     }
                 }
 
