--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,16 @@ body,
 .modal-delete > div {
   bottom: 20vh;
 }
+
+ul,
+ol {
+  padding-left: 1.5em;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+ol {
+  list-style-type: decimal;
+}
