--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,10 +41,35 @@ ol {
   padding-left: 1.5em;
 }
 
+nav ul {
+  list-style-type: none;
+}
+
 ul {
   list-style-type: disc;
 }
 
 ol {
   list-style-type: decimal;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
