--- a/styles/scss/home.scss
+++ b/styles/scss/home.scss
@@ -3,17 +3,29 @@
     height: 90vh;
     display: flex;
 
+    @media (max-width: 767px) {
+        height: 70vh;
+    }
+
     section {
         width: 100%;
 
         &:first-of-type {
             padding-left: $p;
 
+            @media (max-width: 767px) {
+                padding-left: $p_md;
+            }
+
             >div {
                 height: 100%;
 
                 >h1 {
                     font: 900 4rem $text1;
+
+                    @media (max-width: 767px) {
+                        font: 700 3rem $text1;
+                    }
                 }
 
                 .Typewriter {
@@ -34,8 +46,6 @@
                         color: #333;
                     }
                 }
-
-
 
                 aside {
                     display: flex;
@@ -63,6 +73,10 @@
 
                     >p {
                         font: 900 2rem $text1;
+
+                        @media (max-width: 767px) {
+                            font: 700 1.6rem $text1;
+                        }
                     }
 
                     >span {
@@ -84,6 +98,10 @@
             overflow-x: hidden;
             position: relative;
 
+            @media (max-width: 767px) {
+                display: none;
+            }
+
             &::after {
                 content: "";
                 flex: 1;
@@ -94,6 +112,15 @@
                 z-index: 0;
                 border-radius: 50%;
 
+                @media (max-width: 1023px) {
+                    width: 28vmax;
+                    height: 28vmax;
+                    top: 40%;
+                }
+
+                @media (max-width: 767px) {
+                    display: none;
+                }
             }
 
             >img {
